kb/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis-container
        image: redis
---
apiVersion: v1
kind: Service              
metadata:
  name: redis-service
spec:
  type: LoadBalancer       
  ports:
  - port: 6379               
    protocol: TCP          
    targetPort: 6379         
  selector:                
    app: redis
