kb/rvs-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rvs-app
  labels:
    app: rvs-app
spec:
  replicas: 2
  strategy:
    type: RollingUpdate                                   
    rollingUpdate: 
      maxUnavailable: 1                                   
      maxSurge: 1 
  selector:
    matchLabels:
      app: rvs-app
  template:
    metadata:
      labels:
        app: rvs-app
    spec:
      containers:
      - name: rvs-app-container
        image: ammarchyk/rvs_app
---
apiVersion: v1
kind: Service              
metadata:
  name: rvs-app-service
spec:
  type: LoadBalancer       
  ports:
  - port: 80               
    protocol: TCP          
    targetPort: 5000         
  selector:                
    app: rvs-app
