kb/rvs-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rvs-app-ingress
  annotations:
    haproxy.org/ingress.class: haproxy
  namespace: ns-14
spec:
  rules:
    - host: node-14.fergus.host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rvs-app-service
                port:
                  number: 80
